# squint

./: .gitignore  NEWS  README  TODO  meson.build  squint-disabled.dia  squint.1.html  squint.1.t2t  squint.c  squint.dia  squint.h  wscript  x11.c
.github/workflows/: gh-pages.yml
